--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,17 @@ $RECYCLE.BIN/
 #######
 # Vim
 #######
+# Swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+
+# Temporary
+.netrwhist
+*~
+# Auto-generated tag files
+tags
